# aiaa-5047-project

./: .dockerignore  .gitignore  Dockerfile  README.org  pyproject.toml
report/: main.tex  neurips_2024.sty
scripts/: collect-activations.py  collect.sh  docker-run.sh  train-sae.py  viz-zh-en.py
scripts/bash/: collect.sh  docker-run.sh  train.sh
src/data/: culturax.py  sampler.py
src/models/: hooked.py  sae.py  sae_nnx.py  utils.py
src/trainer/: __init__.py  config.py  metrics.py  trainer.py
src/utils/: benchmark.py  ckpt.py  logging.py
src/viz/: co_occurrence.py  viz.py
