[tool.poetry]
# name = ""
# version = "0.0.0"
# description = ""
package-mode = false
authors = ["Ziqin Gong <gongzq0301@gmail.com>"]
license = "MIT"
# readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jax = "^0.4.35"
flax = "^0.10.2"
transformer-lens = "^2.9.1"
pandas = "^2.2.3"
fastparquet = "^2024.11.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
