[tool.poetry]
# name = ""
# version = "0.0.0"
# description = ""
package-mode = false
authors = ["Ziqin Gong <gongzq0301@gmail.com>"]
license = "MIT"
# readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jax = {version = "0.4.26", extras = ["cuda12"]}
flax = "0.8.2"
chex = "0.1.86"
optax = "0.2.2"
pandas = "^2.2.3"
fastparquet = "^2024.11.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
