[tool.poetry]
name = "src"
version = "0.0.1"
description = ""
authors = ["Ziqin Gong <gongzq0301@gmail.com>"]
license = "MIT"
# readme = "README.md"
packages = [ { include = "src" } ]

[tool.poetry.dependencies]
python = "^3.10"
jax = "0.4.26"
jaxlib = "0.4.26"
flax = "0.8.2"
chex = "0.1.86"
optax = "0.2.2"
transformer-lens = "^2.9.1"
pandas = "^2.2.3"
fastparquet = "^2024.11.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
